# rdf-types

./: CHANGELOG.md  Cargo.toml  README.md  README.tpl  cliff.toml
.github/workflows/: ci.yml
src/: blankid.rs  dataset.rs  display.rs  generator.rs  grdf.rs  interpretation.rs  lib.rs  literal.rs  loc.rs  macro.rs  meta.rs  quad.rs  schema.rs  term.rs  triple.rs  utils.rs  vocabulary.rs
src/dataset/: fallible.rs  isomorphism.rs  mod.rs
src/dataset/graph/: fallible.rs  mod.rs
src/dataset/graph/impl/: btree_graph.rs  indexed_btree_graph.rs  mod.rs
src/dataset/impl/: btree_dataset.rs  indexed_btree_dataset.rs  mod.rs
src/id/: cow.rs  mod.rs  ref.rs
src/interpretation/: blank_id.rs  fallible.rs  id.rs  indexed.rs  iri.rs  literal.rs  mod.rs  none.rs  term.rs  with_generator.rs
src/interpretation/impl/: indexed.rs  mod.rs  none.rs  vocabulary.rs  with_generator.rs
src/literal/: cow.rs  map.rs  mod.rs  ref.rs  type.rs
src/literal/type/: cow.rs  mod.rs  ref.rs
src/pattern/: canonical.rs  map.rs  mod.rs  resource_or_variable.rs
src/pattern/quad/: canonical.rs  mod.rs
src/pattern/triple/: canonical.rs  map.rs  mod.rs
src/term/: cow.rs  id.rs  into.rs  maybe_blank.rs  maybe_iri.rs  maybe_literal.rs  mod.rs  ref.rs
src/term/generator/: blank.rs  interpretation.rs  mod.rs  uuid.rs
src/term/local/: cow.rs  mod.rs  ref.rs
src/vocabulary/: blank_id.rs  index.rs  indexed.rs  iri.rs  langtag.rs  literal.rs  mod.rs  none.rs  scoped.rs
src/vocabulary/impl/: mod.rs  none.rs  scoped.rs
src/vocabulary/impl/indexed/: blankid.rs  iri.rs  literal.rs  mod.rs
src/vocabulary/indexed/: blankid.rs  iri.rs  langtag.rs  literal.rs
tests/: iso-negative.rs  iso.rs
tests/utils/: generate-iso-test.rb  iso.rs.template
