[package]
name = "rdf-types"
version = "0.12.11"
edition = "2021"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
description = "Common RDF types definitions."
categories = ["data-structures"]
keywords = ["rdf", "w3c", "triple", "quad", "blank"]
repository = "https://github.com/timothee-haudebourg/rdf-types"
documentation = "https://docs.rs/rdf-types"
license = "MIT/Apache-2.0"
readme = "README.md"

[features]
default = []
meta = ["locspan", "locspan-derive"]
uuid-generator = ["uuid-generator-v3", "uuid-generator-v4", "uuid-generator-v5"]
uuid-generator-v3 = ["uuid", "uuid/v3"]
uuid-generator-v4 = ["uuid", "uuid/v4"]
uuid-generator-v5 = ["uuid", "uuid/v5"]

[dependencies]
iref = "2.2"
langtag = "0.3"
locspan = { version = "0.7.2", optional = true }
locspan-derive = { version = "0.6", optional = true }
contextual = { version = "0.1.1", optional = true }
uuid = { version = "0.8", optional = true }