[package]
name = "rdf-types"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
description = "Data-structures and traits definitions for RDF."
categories = ["data-structures"]
keywords = ["rdf", "w3c", "triple", "quad", "blank"]
repository = "https://github.com/timothee-haudebourg/rdf-types"
documentation = "https://docs.rs/rdf-types"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2021"
rust-version = "1.70.0"
version = "0.22.1"

[features]
default = []
serde = ["dep:serde", "iref/serde", "langtag/serde"]
uuid-generator = ["uuid-generator-v3", "uuid-generator-v4", "uuid-generator-v5"]
uuid-generator-v3 = ["uuid", "uuid/v3"]
uuid-generator-v4 = ["uuid", "uuid/v4"]
uuid-generator-v5 = ["uuid", "uuid/v5"]

[dependencies]
iref = "3.1.4"
static-iref = "3.0"
langtag = "0.4.0"
indexmap = "2.2.5"
thiserror = "1.0.57"
educe = "0.5.11"
slab = "0.4.9"
replace_with = "0.1.7"
raw-btree = "0.1.4"
contextual = { version = "0.1.6", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
uuid = { version = "0.8", optional = true }

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }